half of the addVideoClip unit tests